--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
